# trame-mnist

./: .gitignore  README.rst  example.ipynb  setup.cfg
.deploy-release/: Dockerfile
.deploy-release/setup/: apps.yml  initialize.sh
bundles/docker/: Dockerfile  README.md
bundles/docker/scripts/: build_image.sh  build_server.sh  run_image.sh  run_server.sh
bundles/docker/setup/: apps.yml  initialize.sh
trame_mnist/app/: jupyter.py  main.py  ui.py
trame_mnist/app/engine/: charts.py  main.py  utils.py
trame_mnist/app/engine/ml/: common.py  prediction.py  testing.py  training.py  xai.py
