[metadata]
name = trame-mnist
version = 2.1.0
description = Visualization exploration for AI/XAI
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Kitware Inc.
license = BSD License
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: JavaScript
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    Python
    Interactive
    Web
    Application
    Framework

[options]
packages = find:
include_package_data = True
install_requires =
    trame>=2.1.0
    # chart
    plotly==5.15.0
    pandas
    # ml core
    torch==1.10.2
    torchvision==0.11.3
    # xaitk
    smqtk-classifier==0.19.0
    smqtk-core==0.19.0
    smqtk-dataprovider==0.18.0
    smqtk-descriptors==0.19.0
    smqtk-image-io==0.17.1
    xaitk-saliency==0.7.0
    scikit-learn==1.3.0
    scikit-image==0.21.0

[options.entry_points]
console_scripts =
    trame-mnist = trame_mnist:main
